smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply/apply-missing-space.smithy
// Parse error at line 5, column 10 near `{ `: Expected one or more whitespace characters | Model
$version: "2.0"
namespace smithy.example

apply Foo{ @sensitive }
